crates/swc/tests/tsc-references/classExtendsItself_es2015.1.normal.js
class C extends C {
} // error
class D extends D {
} // error
class E extends E {
} // error
